Fix subscription button text on mobile

--- a/src/app/components/subscription/_index.scss
+++ b/src/app/components/subscription/_index.scss
@@ -66,7 +66,7 @@
     width: $submit-button-width-small;
     background: $blu;
 
-    .text {
+    .submit-text {
       display: none;
     }
 
@@ -102,7 +102,7 @@
       width: auto;
       padding: 0 20px;
 
-      .text {
+      .submit-text {
         display: inline;
       }
 
